# DHBW-Coding

./: .gitignore
Semester 1/Programming in C/Learning/: CMakeLists.txt  gedankenProtokoll.c
Semester 1/Programming in C/Learning/K100/: 101-hello.c  102-calc.c  103-convert.c  104-power.c  105-eratosthenes_simple.c  106-string_shuffle.c
Semester 1/Programming in C/Learning/K200/: 201-int_overflow.c  201__int_overflow.c  202-floating_point.c  203-ascii_table.c  204-ascii-art.c  205-bitwise_operators.c  205__bitwise_operators_beispiel.c  206-operator_priorities.c
Semester 1/Programming in C/Learning/K300/: 301-eratosthenes.c  302-string_shuffle.c  303-string_comparison.c  304-devowelizer.c  305-matrices.c  306-bullshit_generator.c
Semester 1/Programming in C/Learning/K400/: 401-switch_case.c  402-number_puzzle.c
Semester 1/Programming in C/Learning/K500/: 501-game-of-life.c  505-main-command-line-args.c  506-ackermann.c  507-hanoi.c  508-preprocessor.c
Semester 1/Programming in C/Learning/K600/: 601-address-list.c
Semester 1/Programming in C/Learning/K700/: 701-variables_and_memory.c  702-pointers.c  703-malloc_eratosthenes.c  705-function-plotter.c  706-linked_list.c
Semester 1/Programming in C/Learning/K800/: 801-file-analyzer.c  802-c-program-generator.c  803-SDL_example.c
Semester 1/Programming in C/Learning/Other/: gedankenProtokoll.c  other_1.c
Semester 2/Web Engineering/: index.php
Semester 2/Web Engineering/Forms/: README.md
Semester 2/Web Engineering/Forms/Exercise 1/: index.php  login.php
Semester 2/Web Engineering/Introduction/: index.php
(+36 files in other folders)
